Document POSIX TTY detection, FFM fallback, and terminal mode detection
Terminal Provider page:
- Document FFM native access requirement and silent ExecPty fallback
  when --enable-native-access is not set
- Document piped/redirected I/O behavior: stdin not TTY goes to
  ExternalTerminal, stdout not TTY suppresses ANSI output
- Add examples for common redirection scenarios

Connection page:
- Expand isInteractive() and supportsAnsi() documentation with POSIX
  isatty() behavior details
- Add table showing how each redirection scenario is handled
  (terminal type, isInteractive, supportsAnsi)
- Document that supportsAnsi() now checks stdout TTY status following
  ls --color=auto convention

Color Detection page:
- Add Terminal Mode Detection section documenting ModeSupport enum
  (SUPPORTED, NOT_SUPPORTED, NO_RESPONSE) and the DECRQM + DA1
  batched probe
- Document synchronizedOutputSupport() and graphemeClusterSupport()
  accessors on TerminalCapabilities
- Document native grapheme clustering detection via cursor probe
  in detectFull()